--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,21 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Geolocation
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-button (click)="geolocation.getCurrentLocation()">Enable Geolocation</ion-button>
+
+  <h2></h2>
+
+  <ion-button (click)="fcm.registerPushNotifications()">Register</ion-button>
+  <ion-button (click)="fcm.unregisterPushNotification()">Unregister</ion-button>
+  <ion-button (click)="fcm.getDeliveredNotifications()">Notification</ion-button>
+
+  <ion-button (click)="fcm.sendNotification()">Send</ion-button>
+
 </ion-content>
