--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,19 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-content>
+    <div class="container">
+      <ion-router-outlet></ion-router-outlet>
+    </div>
+  </ion-content>
+
+  <ion-tabs *ngIf="this.currentUrl != '/auth'">
+    <ion-tab-bar slot="bottom">
+
+      <ion-tab-button routerLink="/auth" (click)="changeActivedTab('auth-tab-icon')"><ion-icon id="auth-tab-icon" name="play-circle" size="small"></ion-icon>Auth</ion-tab-button>
+
+      <ion-tab-button class="active-tab" routerLink="/" (click)="changeActivedTab('home-tab-icon')"><ion-icon id="home-tab-icon" name="alert-circle-outline" size="normal"></ion-icon>SOS</ion-tab-button>
+
+      <ion-tab-button routerLink="/settings" (click)="changeActivedTab('settings-tab-icon')"><ion-icon id="settings-tab-icon" name="settings-outline" size="small"></ion-icon >Impostazioni</ion-tab-button>
+      
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-app>
