--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
   <ion-tabs *ngIf="this.currentUrl != '/auth'">
     <ion-tab-bar slot="bottom">
 
-      <ion-tab-button routerLink="/auth" (click)="changeActivedTab('auth-tab-icon')"><ion-icon id="auth-tab-icon" name="play-circle" size="small"></ion-icon>Auth</ion-tab-button>
+      <ion-tab-button routerLink="/map-sos" (click)="changeActivedTab('auth-tab-icon')"><ion-icon id="auth-tab-icon" name="play-circle" size="small"></ion-icon>Emergenze</ion-tab-button>
 
       <ion-tab-button class="active-tab" routerLink="/" (click)="changeActivedTab('home-tab-icon')"><ion-icon id="home-tab-icon" name="alert-circle-outline" size="normal"></ion-icon>SOS</ion-tab-button>
 
