--- a/src/app/page/settings/settings.page.html
+++ b/src/app/page/settings/settings.page.html
@@ -6,7 +6,7 @@
 
 <ion-content>
   <ion-row>
-    <h4>Caricamento coordinate...</h4>
+    <h4 id="coordinates-text">Caricamento coordinate...</h4>
     <ion-button (click)="geolocation.getCurrentLocation()">Attiva Geolocalizzazione</ion-button>
     <ion-button (click)="fcm.registerPushNotifications()">Attiva Notifiche</ion-button>
     <ion-button (click)="fcm.unregisterPushNotification()">Disattiva Notifiche</ion-button>
