Rimossa chiave API google e cambiato colore del testo per i bottoni dedicati al routing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -56,7 +56,8 @@ ion-app {
         }
 
         .active-tab {
-          color: #F8F8FF !important;
+          color: #de093a !important;
+          font-weight: bold;
         }
       }
     }
